--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,84 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+html, body, #root {
+  min-height: 100%; /*fundo ocupa td a tela*/
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: #000 url('./assets/background.jpg') no-repeat;
+  background-size: cover; /*img ocupa td a tela*/
+  -webkit-font-smoothing: antialiased !important; /*font fica mais detalhada*/
+}
+
+body, input, button { /*por padrao n herda a msm fonte q o body*/
+  font-family: 'Roboto', Arial, Helvetica, sans-serif; /*tenta colocar a fonte nessa ordem caso de erro*/
+  font-size: 14px;
+}
+
+.container {
+   margin:  80px auto 0;
+   max-width: 450px;
+   width: 100%; /*se tiver a menos de 450px, vai ocupar a largura inteira da tela*/
+   display: flex;
+   flex-direction: column; /*cada elemento fica um embaixo do outro e no centro*/
+   align-items: center;
+}
+
+.content {
+  width: 100%;
+  background: #FFF;
+  margin-top: 50px;
+  border-radius: 4px;
+  padding: 30px;
+}
+
+.content > p { /*estiliza o primeiro p dentro de .content*/
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+
+.content form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.content form label {
+  font-size: 14px;
+  color: #444;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.content form input {
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  height: 45px;
+  padding: 0 15px;
+  font-size: 16px;
+}
+
+.content button.btn {
+  border: 0;
+  border-radius: 2px;
+  width: 100%;
+  height: 42px;
+  padding: 0 20px;
+  font-size: 16px;
+  font-weight: bold;
+  background: #f05a5b;
+  color: #fff;
+  cursor: pointer;
+}
+
+.content button.btn:hover {
+  background: #e14f50;
 }
